objects/IP__c.object
<CustomObject>
    <description>IP from PLM</description>
    <fields>
        <fullName>BFM_OAT__c</fullName>
        <label>BFM OAT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Size_Configuration__c</fullName>
        <label>Block Size Configuration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calibre_DRC_Deck__c</fullName>
        <label>Calibre DRC Deck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calibre_LVS_Deck__c</fullName>
        <label>Calibre LVS Deck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_QA_Date__c</fullName>
        <label>DFM QA Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFM_QA_Status__c</fullName>
        <label>DFM QA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_List__c</fullName>
        <label>Device List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEOL_Layer__c</fullName>
        <label>FEOL Layer List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_DK_QA_DATE__c</fullName>
        <label>FE DK QA Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_DK_QA_Status__c</fullName>
        <label>FE DK QA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mapping between the IP and IP Design Kit.</description>
        <label>IP</label>
        <referenceTo>Base_IP__c</referenceTo>
        <relationshipLabel>IP Design Kit</relationshipLabel>
        <relationshipName>IP_Design_Kit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Device_List__c</fullName>
        <label>IP Device List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Geometry__c</fullName>
        <label>IP Geometry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_ID__c</fullName>
        <label>IP ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Tagging_Information__c</fullName>
        <label>IP Tagging Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_Technology__c</fullName>
        <description>IP Geometry Technology</description>
        <label>IP Technology</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type_Category__c</fullName>
        <label>IP Type Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Type__c</fullName>
        <label>IP Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Vendor__c</fullName>
        <label>IP_Vendor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Design_Kit__c</fullName>
        <formula>Name  =  Latest_Version__c</formula>
        <label>Latest Design Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Version__c</fullName>
        <label>Latest Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_ID__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Library ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Name__c</fullName>
        <label>Library Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>IP Design-Kit Lifecycle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack_List__c</fullName>
        <label>Metal Stack List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_QA_Date__c</fullName>
        <label>PH1 QA Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_QA_Status__c</fullName>
        <label>PH1 QA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Number__c</fullName>
        <label>PT Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Showstopper__c</fullName>
        <label>Showstopper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_IP_Tech__c</fullName>
        <label>Sub IP Tech</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triple_Well_Dual_Well__c</fullName>
        <label>Triple Well - Dual Well</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wirebound_or_Flipchip__c</fullName>
        <label>Wirebound or Flipchip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>IP Design Kit</label>
    <nameField>
        <label>IP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Design Kit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>